force-app/main/default/objects/Family_Information__c/Family_Information__c.object-meta.xml
<CustomObject>
    <label>Family Information</label>
    <nameField>
        <label>Family Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Family Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>