force-app/main/default/objects/Family_Information__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <label>Dependent&apos;s Date of Birth</label>
    <type>Date</type>
</CustomField>