force-app/main/default/objects/Family_Information__c/fields/Family_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Family_Member_Name__c</fullName>
    <label>Family Member Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>