force-app/main/default/objects/Family_Information__c/fields/Is_It_Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_It_Emergency_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is It Emergency Contact ?</label>
    <type>Checkbox</type>
</CustomField>