force-app/main/default/objects/Family_Information__c/fields/Membership_ID__c.field-meta.xml
<CustomField>
    <fullName>Membership_ID__c</fullName>
    <label>Membership ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>