force-app/main/default/objects/Family_Information__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Family Informations</relationshipLabel>
    <relationshipName>Family_Informations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>