force-app/main/default/objects/Family_Information__c/validationRules/Contact_Phone_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Phone_number</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
NOT(ISBLANK(Contact_Phone_Number__c)), 
NOT(REGEX(Contact_Phone_Number__c, &quot;\\D*?(\\d\\D*?){10}&quot;)) 
)</errorConditionFormula>
    <errorDisplayField>Contact_Phone_Number__c</errorDisplayField>
    <errorMessage>Please enter a valid 10 digit phone number</errorMessage>
</ValidationRule>