force-app/main/default/objects/Family_Information__c/validationRules/Date_of_birth_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_birth_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_Birth__c  &gt;= TODAY()</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Date of birth must be past date</errorMessage>
</ValidationRule>