force-app/main/default/objects/Family_Information__c/validationRules/DOB_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(  Date_of_Birth__c  ) &amp;&amp;   Is_It_Dependent_Contact__c</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Date of Birth is required for Dependent Contact</errorMessage>
</ValidationRule>