force-app/main/default/objects/Family_Information__c/validationRules/Phone_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Contact_Phone_Number__c ) &amp;&amp;  Is_It_Emergency_Contact__c</errorConditionFormula>
    <errorMessage>Contact Phone Number is required for emergency relation</errorMessage>
</ValidationRule>